data/derived/comb/progs/unify/prog1681.ml.out
Characters 38-39:
  let f a x = a +. x ** 2in
                        ^
Error: This expression has type int but an expression was expected of type
         float
